--- a/src/theme/channel.css
+++ b/src/theme/channel.css
@@ -1,4 +1,10 @@
+
+html {
+    --antd-wave-shadow-color: #e56045;
+  }
+
 body {background:'#ECECEC' !important;}
+
 
 a {
     color:#e56045;
@@ -7,6 +13,14 @@ a {
 a:hover {
     opacity: 0.87;
     color: #e56045;
+}
+
+.mrn {
+    margin-right:0px !important;
+}
+
+.pull-left {
+    float:left;
 }
 
 .ant-input:hover {
@@ -282,9 +296,34 @@ a:hover {
 }
 
 
+.ant-checkbox-checked .ant-checkbox-inner {
+    background-color: #e56045;
+    border-color: #e56045;
+  }
+
+  .ant-checkbox-indeterminate .ant-checkbox-inner::after {
+    top: 50%;
+    left: 50%;
+    width: 8px;
+    height: 8px;
+    background-color: #e56045;
+    border: 0;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+        -ms-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+    content: ' ';
+  }
+
+
+  .ant-checkbox-wrapper:hover .ant-checkbox-inner,
+  .ant-checkbox:hover .ant-checkbox-inner,
+  .ant-checkbox-input:focus + .ant-checkbox-inner {
+    border-color: #e56045;
+  }
 
 .ant-calendar-picker:hover .ant-calendar-picker-input:not(.ant-input-disabled) {
-	border-color: #74c9ff;
+	border-color: #e56045;
 }
 
 .ant-layout {
@@ -314,16 +353,231 @@ a:hover {
 
 }
 
+.ant-btn-dashed {
+    color: rgba(0, 0, 0, 0.65);
+    background-color: #fff;
+    border-color: #d9d9d9;
+    border-style: dashed;
+  }
+  .ant-btn-dashed > a:only-child {
+    color: currentColor;
+  }
+  .ant-btn-dashed > a:only-child::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: transparent;
+    content: '';
+  }
+  .ant-btn-dashed:hover,
+  .ant-btn-dashed:focus {
+    color: #e56045;
+    background-color: #fff;
+    border-color: #e56045;
+  }
+  .ant-btn-dashed:hover > a:only-child,
+  .ant-btn-dashed:focus > a:only-child {
+    color: currentColor;
+  }
+  .ant-btn-dashed:hover > a:only-child::after,
+  .ant-btn-dashed:focus > a:only-child::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: transparent;
+    content: '';
+  }
+  .ant-btn-dashed:active,
+  .ant-btn-dashed.active {
+    color: #e56045;
+    background-color: #fff;
+    border-color: #e56045;
+  }
+  .ant-btn-dashed:active > a:only-child,
+  .ant-btn-dashed.active > a:only-child {
+    color: currentColor;
+  }
+  .ant-btn-dashed:active > a:only-child::after,
+  .ant-btn-dashed.active > a:only-child::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: transparent;
+    content: '';
+  }
+  .ant-btn-dashed-disabled,
+  .ant-btn-dashed.disabled,
+  .ant-btn-dashed[disabled],
+  .ant-btn-dashed-disabled:hover,
+  .ant-btn-dashed.disabled:hover,
+  .ant-btn-dashed[disabled]:hover,
+  .ant-btn-dashed-disabled:focus,
+  .ant-btn-dashed.disabled:focus,
+  .ant-btn-dashed[disabled]:focus,
+  .ant-btn-dashed-disabled:active,
+  .ant-btn-dashed.disabled:active,
+  .ant-btn-dashed[disabled]:active,
+  .ant-btn-dashed-disabled.active,
+  .ant-btn-dashed.disabled.active,
+  .ant-btn-dashed[disabled].active {
+    color: rgba(0, 0, 0, 0.25);
+    background-color: #f5f5f5;
+    border-color: #d9d9d9;
+    text-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  .ant-btn-dashed-disabled > a:only-child,
+  .ant-btn-dashed.disabled > a:only-child,
+  .ant-btn-dashed[disabled] > a:only-child,
+  .ant-btn-dashed-disabled:hover > a:only-child,
+  .ant-btn-dashed.disabled:hover > a:only-child,
+  .ant-btn-dashed[disabled]:hover > a:only-child,
+  .ant-btn-dashed-disabled:focus > a:only-child,
+  .ant-btn-dashed.disabled:focus > a:only-child,
+  .ant-btn-dashed[disabled]:focus > a:only-child,
+  .ant-btn-dashed-disabled:active > a:only-child,
+  .ant-btn-dashed.disabled:active > a:only-child,
+  .ant-btn-dashed[disabled]:active > a:only-child,
+  .ant-btn-dashed-disabled.active > a:only-child,
+  .ant-btn-dashed.disabled.active > a:only-child,
+  .ant-btn-dashed[disabled].active > a:only-child {
+    color: currentColor;
+  }
+
+  .ant-radio-checked .ant-radio-inner {
+    border-color: #e56045;
+  }
+
+  .ant-radio-checked::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #e56045;
+    border-radius: 50%;
+    visibility: hidden;
+    -webkit-animation: antRadioEffect 0.36s ease-in-out;
+            animation: antRadioEffect 0.36s ease-in-out;
+    -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+    content: '';
+  }
+
+  .ant-radio-inner::after {
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    display: table;
+    width: 8px;
+    height: 8px;
+    background-color: #e56045;
+    border-top: 0;
+    border-left: 0;
+    border-radius: 8px;
+    -webkit-transform: scale(0);
+        -ms-transform: scale(0);
+            transform: scale(0);
+    opacity: 0;
+    -webkit-transition: all 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
+    transition: all 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
+    content: ' ';
+  }
+
+  .ant-radio-wrapper:hover .ant-radio,
+.ant-radio:hover .ant-radio-inner,
+.ant-radio-input:focus + .ant-radio-inner {
+  border-color: #e56045;
+}
+
+  .ant-btn-dashed-disabled > a:only-child::after,
+  .ant-btn-dashed.disabled > a:only-child::after,
+  .ant-btn-dashed[disabled] > a:only-child::after,
+  .ant-btn-dashed-disabled:hover > a:only-child::after,
+  .ant-btn-dashed.disabled:hover > a:only-child::after,
+  .ant-btn-dashed[disabled]:hover > a:only-child::after,
+  .ant-btn-dashed-disabled:focus > a:only-child::after,
+  .ant-btn-dashed.disabled:focus > a:only-child::after,
+  .ant-btn-dashed[disabled]:focus > a:only-child::after,
+  .ant-btn-dashed-disabled:active > a:only-child::after,
+  .ant-btn-dashed.disabled:active > a:only-child::after,
+  .ant-btn-dashed[disabled]:active > a:only-child::after,
+  .ant-btn-dashed-disabled.active > a:only-child::after,
+  .ant-btn-dashed.disabled.active > a:only-child::after,
+  .ant-btn-dashed[disabled].active > a:only-child::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: transparent;
+    content: '';
+  }
+
+
+  .ant-transfer-list-content-item:not(.ant-transfer-list-content-item-disabled):hover {
+    background-color: #ffb9b2;
+    cursor: pointer;
+  }
+
+  .ant-btn-default:active, .ant-btn-default.active {
+    color: #e56045;
+    border-color: #e56045;
+  }
+
+  .ant-btn-default:hover, .ant-btn-default:focus {
+    color: #e56045;
+  }
+
+
+  .QrcodeLoginImg {
+    margin: 0 auto;
+    width:300px;
+  }
+  .login_filter {
+    width:500px;
+    padding:24px;
+    margin: 0 auto;
+    background: white;
+  }
+
+  @-webkit-keyframes transferHighlightIn {
+    0% {
+      background: #ffb9b2;
+    }
+    100% {
+      background: transparent;
+    }
+  }
+  @keyframes transferHighlightIn {
+    0% {
+      background: #ffb9b2;
+    }
+    100% {
+      background: transparent;
+    }
+  }
+
+  .ant-transfer-list-content-item:not(.ant-transfer-list-content-item-disabled):hover  {
+    background-color: #ffb9b2;
+  }
 .ant-btn-default:hover {
     color:#e56045;
 }
 
 .ant-btn-group .ant-btn-primary:first-child:not(:last-child) {
-    border-right-color: #74c9ff;
+    border-right-color: #e56045;
 }
 
 .ant-btn-group .ant-btn-primary:last-child:not(:first-child), .ant-btn-group .ant-btn-primary + .ant-btn-primary {
-	border-left-color: #74c9ff;
+	border-left-color: #e56045;
 }
 
 .ant-tabs.ant-tabs-card > .ant-tabs-bar .ant-tabs-tab-active {
